Fix contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,12 +1,14 @@
 :root {
     --primary-color: #0B4F6C;
     /* Deep river blue */
-    --secondary-color: #01BAEF;
+    --secondary-color: #01607b;
     /*Bright water blue */
-    --accent1-color: #20BF55;
+    --accent1-color: #11662d;
     /* Forest green */
-    --accent2-color: #F3A712;
+    --accent2-color: #ffe2a9;
     /* Adventure gold  */
+    --text1-color: #ece7e7;
+    --text2-color: #262525;
 
     --heading-font: 'Trebuchet MS', sans-serif;
     --body-font: 'Arial', sans-serif;
@@ -59,9 +61,9 @@ nav ul {
 
 header nav ul li a {
     text-decoration: none;
-    color: #F3A712;
+    color: var(--accent2-color);
     padding: 0.5rem 1rem;
-    border: 2px solid #F3A712;
+    border: 2px solid var(--accent2-color);
     border-radius: 4px;
     background-color: transparent;
 
@@ -80,6 +82,10 @@ section,
 article {
     margin: 16px;
     padding: 8px;
+}
+
+article p {
+    color: var(--text2-color);
 }
 
 #history {
@@ -166,7 +172,7 @@ h1 {
     text-align: center;
     opacity: 0.9;
     background-color: var(--accent1-color);
-    color: #fff;
+    color: var(--text1-color);
 }
 
 .hero article {
@@ -180,7 +186,6 @@ h1 {
     text-align: center;
     border-radius: 10px;
     background-color: var(--accent2-color);
-    color: #fff;
     clear: both;
 }
 
